--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,7 +18,6 @@ body{
     font-weight: 300;
 }
 
-
 /*---- Headings ----*/
 h1, h2, h3, h4, h5, h6{
     margin: 0 0 20px;
@@ -126,9 +125,10 @@ img{
 
 /*---- Layout ----*/
 .container{
-    max-width: 1200px;
+    max-width: 1300px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 100px;    
 }
 
 /*---- Padding ----*/
@@ -233,12 +233,12 @@ img{
     content: "";
 }
 .top-bottom-overlay:after{
-    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%);    
+    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%);
     bottom: 0;
     content: "";
 }
 .bottom-overlay:after{
-    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%);    
+    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%);
     bottom: 0;
     content: "";  
 }
@@ -254,8 +254,9 @@ img{
 }
 
 /*---- Site Header ----*/
-.site-header{
-    z-index: 99;
+.site-header{    
+    z-index: 99;    
+    transition: all ease 0.2s;
 }
 .site-nav ul{
     column-gap: 40px;
@@ -264,6 +265,24 @@ img{
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 2px;
+}
+.site-header:before{
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgb(0,0,0,1) 0%, transparent 100%);
+    display: block;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease 0.2s;
+    z-index: -1;
+}
+.header-overlay:before{
+    opacity: 0.8;
+    visibility: visible;
 }
 
 /*---- Hero Section ----*/
@@ -281,7 +300,7 @@ img{
     margin: 0;
 }
 .image-grid-section .image-grid-wrapper{
-    grid-template-columns: auto 57%;
+    grid-template-columns: auto 55%;
     column-gap: 50px;
 }
 .image-grid-section .image-block-left .summary-block{
@@ -328,7 +347,7 @@ img{
 
 /*---- Opportunties Section ----*/
 .opportunities .summary-block{
-    padding-top: 60px;
+    padding: 60px 20px 0;
 }
 .opportunities h3{
     color: var(--color-gray);
@@ -336,8 +355,7 @@ img{
 
 /*---- Team Section ----*/
 .team-wrapper{
-    grid-template-columns: 60% auto;
-    grid-template-areas: 'teamMain teamItems'; 
+    grid-template-columns: 60% auto;    
     column-gap: 60px;
 }
 .team-wrapper h3{
@@ -347,12 +365,8 @@ img{
     max-width: 80%;
     padding: 60px;    
 }
-.team-main-image{
-    grid-area: teamMain;
-}
-.team-item{    
-    column-gap: 25px;
-    grid-area: teamItems;
+.team-item{
+    column-gap: 25px;    
 }
 .team-items button{
     width: 100%;
@@ -376,6 +390,7 @@ img{
 }
 .team-wrapper .position-block{
     font-size: 12px;
+    line-height: 20px;
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -469,4 +484,242 @@ img{
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 1px;    
+}
+
+/*---- Responsive ----*/
+@media(max-width: 1280px){
+
+    :root{
+        --font-size-58: 50px;
+    }
+    h2{
+        font-size: 36px;
+    }
+    h3{
+        font-size: 26px;
+    }
+    h4{
+        font-size: 20px;
+    }
+    .team-wrapper{
+        grid-template-columns: 58% auto;
+        column-gap: 40px;
+    }
+    .team-wrapper .image-block .summary-block{
+        max-width: 100%;
+        padding: 40px;
+    }
+    .team-items button{
+        margin: 0 0 20px;
+    }
+    .team-item{
+        column-gap: 20px;
+    }
+    .contact-section .summary-block{
+        padding: 60px 40px;
+    }
+    .contact-wrapper{
+        column-gap: 80px;
+    }
+
+}
+
+@media(max-width: 1180px){
+    
+    .team-wrapper{
+        grid-template-columns: 55% auto;
+        column-gap: 30px;
+    }
+    .team-item .image-block{
+        width: 60px;
+        height: 60px;
+    }
+
+}
+
+@media(max-width: 1023px){
+
+    body{
+        line-height: 22px;
+    }    
+    .container{
+        padding: 0 30px;
+    }
+    .m-w-100{
+        width: 100%;
+    }
+    .m-py-80{
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    .m-py-70{
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+    .m-py-30{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .m-px-30{
+        padding-left: 30px;
+        padding-right: 30px;
+    }    
+    .m-pt-50{
+        padding-top: 50px;
+    }
+    .m-pt-0{
+        padding-top: 0;
+    }
+    .m-pb-100{
+        padding-bottom: 100px;
+    }
+    .m-pb-70{
+        padding-bottom: 70px;
+    }
+    .m-pb-50{
+        padding-bottom: 50px;
+    }
+    .m-pb-10{
+        padding-bottom: 10px;
+    }
+    .m-center{
+        text-align: center;
+    }
+    .hero-section .summary-block{
+        width: 100%;
+        padding: 25px;
+    }
+    .image-grid-section .image-grid-wrapper{        
+        column-gap: 20px;
+    }
+    .image-grid-odd .image-grid-wrapper{
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+    }
+    .image-grid-odd .images-block{
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+    }
+    .image-grid-section .image-block-left .summary-block{
+        left: -15px;
+    }
+    .team-wrapper{
+        grid-template-columns: 1fr;
+        row-gap: 30px;
+    }
+    .team-wrapper .image-block .summary-block{
+        padding: 25px;
+    }
+    .team-wrapper .image-block:after{
+        height: 100%;
+    }
+    .team-items{
+        display: flex;        
+        column-gap: 40px;        
+        order: -1;
+        overflow-x: auto;
+    }
+    .team-items button{
+        flex: 0 0 auto;        
+        width: 260px;
+        flex-direction: column;
+        row-gap: 15px;
+        text-align: center;
+    }
+    .team-item .image-block{
+        margin: 0 auto;
+    }
+    .contact-wrapper{
+        grid-template-columns: 1fr;
+        row-gap: 40px;
+    }
+    .contact-wrapper .image-block{
+        order: -1;
+    }
+    .contact-section .summary-block{
+        padding: 50px 25px;
+    }
+    .form-field{
+        padding: 0 0 25px;
+    }
+    .submit-field .submit-button{
+        font-size: 20px;
+    }
+
+}
+
+@media(max-width: 767px){
+
+    :root{
+        --font-size-58: 40px;
+    }
+    h2{
+        font-size: 26px;
+        line-height: 34px;
+    }
+    h3{
+        font-size: 24px;
+        line-height: 30px;
+    }
+    h4{
+        font-size: 18px;
+        line-height: 26px;
+    }
+    .hero-section .summary-block{
+        font-size: 18px;
+        line-height: 26px;
+    }
+    .image-grid-section .image-grid-wrapper{        
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+    }
+    .image-grid-section .image-block-right .summary-block{
+        left: 40px;
+        bottom: 40px;
+    }
+    .image-grid-odd .image-block-left .summary-block {
+        padding: 30px;
+        left: 0;        
+    }
+    .opportunities .summary-block{
+        padding: 30px 20px 0;
+    }
+
+}
+
+@media(max-width: 575px){
+    
+
+    .image-grid-odd .images-block {
+        grid-template-columns: 1fr;
+        column-gap: 20px;
+    }
+    .image-grid-odd .images-block{
+        row-gap: 20px;
+    }
+    .contact-section .summary-block h2{
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .contact-section .summary-block h3{
+        font-size: 16px;
+    }
+
+}
+
+@media(max-width: 480px){
+
+    .opportunities{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+}
+
+@media(max-width: 360px){
+
+    .container{
+        padding: 0 20px;
+    }
+
 }
