--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,11 +6,12 @@
     --heading-font-family: 'Helvetica Neue';
     --font-size-58: 58px;    
     --color-gray: #A7A39C;
+    --color-light-gray: #EDEBE8
 }
 body{
     margin: 0;
     padding: 0;
-    background: #EDEBE8;
+    background: var(--color-light-gray);
     font-family: var(--body-font-family);
     font-size: 14px;
     line-height: 28px;
@@ -77,6 +78,9 @@ img{
     height: 100%;
     object-fit: cover;
     object-position: center center;
+}
+.d-hide{
+    display: none;
 }
 
 /*---- Color ----*/
@@ -269,7 +273,9 @@ img{
 .site-header:before{
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgb(0,0,0,1) 0%, transparent 100%);
+    background-image: linear-gradient(rgb(0,0,0,0.5) 0%, transparent 80%);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     display: block;
     content: "";
     position: absolute;
@@ -281,7 +287,7 @@ img{
     z-index: -1;
 }
 .header-overlay:before{
-    opacity: 0.8;
+    opacity: 1;
     visibility: visible;
 }
 
@@ -585,6 +591,39 @@ img{
     .m-center{
         text-align: center;
     }
+    .d-hide{
+        display: block;
+    }
+    .site-nav{
+        width: 100%;
+        height: 100%;
+        padding: 60px 30px 0;    
+        background: var(--color-light-gray);    
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        transition: all ease 0.2s;
+        z-index: 99;
+    }
+    .site-nav.open-menu{
+        transform: translateX(0%);
+    }
+    .site-nav .close-menu{
+        width: 25px;
+        top: 30px;
+        right: 30px;
+    }
+    .site-nav .close-menu img{
+        width: 100%;
+    }
+    .site-nav ul{
+        flex-direction: column;
+        row-gap: 20px;
+    }
+    .site-nav li a{
+        color: #000;
+    }    
     .hero-section .summary-block{
         width: 100%;
         padding: 25px;
@@ -720,6 +759,15 @@ img{
 
     .container{
         padding: 0 20px;
+    }
+
+}
+
+@media(max-width: 320px){
+
+    .m-px-30 {
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
 }
