--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -284,7 +284,25 @@ img{
 .site-nav li a{
     font-size: 14px;
     font-weight: 400;
-    letter-spacing: 2px;
+    letter-spacing: 2px;    
+}
+.site-nav li a:after{
+    width: 0%;
+    height: 1px;
+    background: var(--color-light);
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease 0.2s;
+}
+.site-nav li a.active:after{
+    width: 100%;
+    visibility: visible;
+    opacity: 1;
 }
 .site-header:before{
     width: 100%;
@@ -696,7 +714,10 @@ img[data-aos^=fade][data-aos^=fade]{
     }
     .site-nav li a{
         color: #000;
-    }    
+    }
+    .site-nav li a:after{        
+        background: var(--color-dark);       
+    }
     .hero-section .summary-block{
         width: 100%;
         padding: 25px;
